// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Color Ranges should add a new range with default color and reasonable distance from last one 1`] = `
Array [
  Object {
    "accessor": "start",
    "colorRange": Object {
      "color": "#aaa",
      "end": 40,
      "start": 20,
    },
    "index": 0,
    "isValid": undefined,
  },
  Object {
    "accessor": "start",
    "colorRange": Object {
      "color": "#bbb",
      "end": 60,
      "start": 40,
    },
    "index": 1,
    "isValid": undefined,
  },
  Object {
    "accessor": "start",
    "colorRange": Object {
      "color": "#ccc",
      "end": 80,
      "start": 60,
    },
    "index": 2,
    "isValid": undefined,
  },
  Object {
    "accessor": "start",
    "colorRange": Object {
      "color": "#ccc",
      "end": 81,
      "start": 80,
    },
    "index": 3,
    "isValid": undefined,
  },
  Object {
    "accessor": "end",
    "colorRange": Object {
      "color": "#ccc",
      "end": 81,
      "start": 80,
    },
    "index": 3,
    "isValid": undefined,
  },
]
`;

exports[`Color Ranges should distribute equally ranges when use click on "Distribute equally" button 1`] = `
Array [
  Object {
    "accessor": "start",
    "colorRange": Object {
      "color": "#aaa",
      "end": 50,
      "start": 0,
    },
    "index": 0,
    "isValid": undefined,
  },
  Object {
    "accessor": "start",
    "colorRange": Object {
      "color": "#bbb",
      "end": 100,
      "start": 50,
    },
    "index": 1,
    "isValid": undefined,
  },
  Object {
    "accessor": "start",
    "colorRange": Object {
      "color": "#ccc",
      "end": 150,
      "start": 100,
    },
    "index": 2,
    "isValid": undefined,
  },
  Object {
    "accessor": "start",
    "colorRange": Object {
      "color": "#ccc",
      "end": 200,
      "start": 150,
    },
    "index": 3,
    "isValid": undefined,
  },
  Object {
    "accessor": "end",
    "colorRange": Object {
      "color": "#ccc",
      "end": 200,
      "start": 150,
    },
    "index": 3,
    "isValid": undefined,
  },
]
`;

exports[`Color Ranges should reverse colors when user click "reverse" 1`] = `
Array [
  "#ddd",
  "#ccc",
  "#bbb",
  "#aaa",
]
`;

exports[`Color Ranges should sort ranges value on whole component blur 1`] = `
Array [
  Object {
    "accessor": "start",
    "colorRange": Object {
      "color": "#bbb",
      "end": 60,
      "start": 40,
    },
    "index": 0,
    "isValid": undefined,
  },
  Object {
    "accessor": "start",
    "colorRange": Object {
      "color": "#ccc",
      "end": 65,
      "start": 60,
    },
    "index": 1,
    "isValid": undefined,
  },
  Object {
    "accessor": "start",
    "colorRange": Object {
      "color": "#aaa",
      "end": 80,
      "start": 65,
    },
    "index": 2,
    "isValid": undefined,
  },
  Object {
    "accessor": "end",
    "colorRange": Object {
      "color": "#aaa",
      "end": 80,
      "start": 65,
    },
    "index": 2,
    "isValid": undefined,
  },
]
`;
